<resources>
    <string name="app_name">Yum Yum Planner</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_your_existing_account">Please sign in to your existing account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="or">Or</string>
    <string name="facebook_login">facebook_login</string>
    <string name="twitter_login">twitter_login</string>
    <string name="google_input">google_input</string>
    <string name="please_sign_up_to_get_started">Please sign up to get started</string>
    <string name="name">Name</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="daily_inspiration">Daily Inspiration for you </string>
    <string name="get_started">Get Started</string>
    <string name="exit">Exit</string>
    <string name="country">Search by Country</string>
    <string name="category">Category :</string>
    <string name="country_">You will eat today from :</string>
    <string name="category_">Category</string>
    <string name="meal_instructions">Meal Instructions</string>
    <string name="add_to_plan">Add To Plan</string>
    <string name="ingrediens">Ingredients which you like :)</string>
    <string name="categories_the_different_food">Categories the different food :)</string>
    <string name="ingredients">Search by Ingredients</string>
    <string name="favourite_meals">Favourite Meals</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="save">Save</string>
    <string name="planner">Planner</string>
    <string name="yum_yum">Yum Yum</string>
    <string name="default_web_client_id">603633507261-6h2prlbg2e3f518n493b7ip6a7ftpcph.apps.googleusercontent.com</string>
    <string name="web_client_secret">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</string>
    <string name="remove_from_plan">Remove From Plan</string>
    <string name="categories">Search by Categories</string>
    <string name="description">Description :</string>
    <string name="meals">Meals :)</string>
    <string name="search">Search</string>
    <string name="ingredients__">Ingredients</string>
    <string name="country__">Country</string>
    <string name="categories__">Categories</string>
    <string name="no_faviouitre_item">No Favourite items</string>
</resources>