<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/meal_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="8dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        android:layout_margin="15dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_constrian"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            >

            <ImageButton
                android:id="@+id/fav_btn_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/transparent"
                android:src="@drawable/faviourte"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                android:id="@+id/image_meal"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:elevation="2dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="25dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintTop_toBottomOf="@id/image_meal"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/country_meal_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/country_"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/category_meal_view"
                app:layout_constraintStart_toStartOf="parent"
                />


            <TextView
                android:id="@+id/country_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/country"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/country_meal_view"
                app:layout_constraintTop_toTopOf="@id/country_meal_view" />

            <TextView
                android:id="@+id/category_meal_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textStyle="italic"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/name_meal"
                app:layout_constraintStart_toStartOf="parent"
                />


            <TextView
                android:id="@+id/category_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/category_"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/category_meal_view"
                app:layout_constraintTop_toTopOf="@id/category_meal_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>