<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/meal_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="8dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        android:layout_margin="15dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_constrian_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            >

            <com.google.android.material.imageview.ShapeableImageView
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                android:id="@+id/image_meal_plan"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:elevation="2dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_meal_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="25dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:drawableStart="@drawable/meal_name"
                android:drawablePadding="12dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/image_meal_plan"
                app:layout_constraintStart_toStartOf="parent"
                />



            <TextView
                android:id="@+id/country_meal_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="12dp"
                android:text="@string/country"
                android:drawableStart="@drawable/country_flag"
                android:drawablePadding="12dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/category_meal_plan"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/category_meal_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:drawableStart="@drawable/category"
                android:text="@string/category_"
                android:drawablePadding="12dp"                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/name_meal_plan"
                app:layout_constraintStart_toStartOf="parent"
                />

            <Button
                android:id="@+id/remove_to_calender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_from_plan"
                android:layout_marginHorizontal="30dp"
                android:textSize="12sp"
                android:layout_marginVertical="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/country_meal_plan"
                app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>