<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".authentication.login.view.LoginFragment">

    <TextView
        android:id="@+id/gust_btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/skip"
        android:layout_margin="16dp"
        android:textColor="#000000"
        android:background="@drawable/skip_backgraound"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_btn"
        android:layout_margin="16dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/sign_up_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:text="@string/sign_up"
        android:textColor="@color/primaryColor"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_up_to_get_started"
        android:textSize="18sp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_txt" />

    <ImageView
        android:id="@+id/image_login"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/onboarding3"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input"
        android:layout_width="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="38dp"
        android:background="@android:color/transparent"
        android:textColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconTint="@color/primaryColor"
        app:shapeAppearance="@style/Rounded"
        app:boxStrokeColor="@color/primaryColor"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeWidth="2dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_login">

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:padding="20dp"
            android:singleLine="true"
            android:autofillHints="name" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="38dp"
        android:background="@android:color/transparent"
        android:textColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconTint="@color/primaryColor"
        app:shapeAppearance="@style/Rounded"
        app:boxStrokeColor="@color/primaryColor"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeWidth="2dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input">

        <EditText
            android:id="@+id/email_et_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:padding="20dp"
            android:singleLine="true"
            android:autofillHints="emailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="38dp"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:boxStrokeWidthFocused="2dp"
        app:shapeAppearance="@style/Rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/email_input"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        >
        <EditText
            android:id="@+id/password_et_sing_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="20dp"
            android:singleLine="true"
            android:autofillHints="password" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/re_password_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="38dp"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:boxStrokeWidthFocused="2dp"
        app:shapeAppearance="@style/Rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        >
        <EditText
            android:id="@+id/re_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="20dp"
            android:singleLine="true"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/re_password_input"
        app:layout_constraintStart_toStartOf="@+id/re_password_input"
        app:layout_constraintTop_toBottomOf="@+id/re_password_input" />

    <ProgressBar
        android:id="@+id/loading_sing_up"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        android:indeterminateTintMode="src_atop"
        android:theme="@style/Widget.Material3.CircularProgressIndicator"
        app:layout_constraintEnd_toEndOf="@+id/re_password_input"
        app:layout_constraintStart_toStartOf="@+id/re_password_input"
        app:layout_constraintTop_toBottomOf="@+id/re_password_input" />

</androidx.constraintlayout.widget.ConstraintLayout>